@@ -10,6 +10,7 @@ Cacti CHANGELOG
 -issue#5142: Correct issues with permission model including display of authorization UI elements and warnings
 -issue#5143: When a Device has zero Graphs or Data Sources, it does not display the correct value
 -issue#5145: Changing SNMP settings to None leaves Bulk Walk Maximum Repititions visible
+-issue#5147: Error 500 on apache when changing languages
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
